hard-gists/5316196/run.log
=== Docker Run Log for 5316196 ===
Started at: Mi 29. Okt 15:36:23 CET 2025

[2025-10-29 15:36:23] START: Running container for 5316196
[2025-10-29 15:36:23] SUCCESS: Container e47bd77d5bfc1dc92d09fe72ae04427fb7e456bec37cbfebe51c28752f388af6 started for 5316196
=== Container logs for 5316196 ===
  File "/snippet.py", line 38
    print 'Just read in the %s data...' % path
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5316196 ===
[2025-10-29 15:36:25] INFO: Container e47bd77d5bfc1dc92d09fe72ae04427fb7e456bec37cbfebe51c28752f388af6 has stopped
